[tool.poetry]
name = "yt2md"
version = "0.0.3"
description = "A tool to convert YouTube videos to Markdown format."
authors = ["Michael <x30827pos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.10"
aiohttp_socks = "^0.9.1"
orjson = "^3.10.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

